--- a/frontend/src/Components/SummaryBlocks/SummaryBlocks.css
+++ b/frontend/src/Components/SummaryBlocks/SummaryBlocks.css
@@ -27,6 +27,6 @@
   color: #3D4127;
 }
 .savings {
-  background-color: #636B2F;
-  color: #D4DE95;
+  background-color: #BAC095;
+  color: #3D4127;
 }
