--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -34,3 +34,19 @@
 .login button:hover {
   background-color: #3D4127;
 }
+.register-link {
+  margin-top: 15px;
+  text-align: center;
+  color: #3D4127;
+}
+
+.register-link a {
+  color: #636B2F;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.register-link a:hover {
+  color: #3D4127;
+  text-decoration: underline;
+}
